--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#333333" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -20,10 +22,51 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-<!-- <link href="https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap" rel="stylesheet"> -->
-<!-- <link href="https://fonts.googleapis.com/css?family=B612+Mono&display=swap" rel="stylesheet"> -->
-<link href="https://fonts.googleapis.com/css?family=B612+Mono|Roboto+Mono&display=swap" rel="stylesheet">
-<title>React App</title>
+    <title>Bomb Finder: A Minesweeper and proxx clone</title>
+    <meta name="author" content="Alec Di Vito">
+    <meta name="image" content="%PUBLIC_URL%/icons/icon-192x192.png">
+    <meta name="description" content="Try your best to navigate
+    a grid of bombs without stepping on one! Track your results and install!
+    A web based clone of minesweeper with insperation from the Google Chrome
+    Labs proxx app.">
+    <!--
+      Item prop
+    -->
+    <meta itemprop="name" content="Bomb Finder: A Minesweeper and proxx clone">
+    <meta name="image" content="%PUBLIC_URL%/icons/icon-192x192.png">
+    <meta name="description" content="Try your best to navigate
+    a grid of bombs without stepping on one! Track your results and install!
+    A web based clone of minesweeper with insperation from the Google Chrome
+    Labs proxx app.">
+    <!--
+      Twitter
+    -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Bomb Finder: A Minesweeper and proxx clone">
+    <meta name="twitter:description" content="Try your best to navigate
+    a grid of bombs without stepping on one! Track your results and install!
+    A web based clone of minesweeper with insperation from the Google Chrome
+    Labs proxx app.">
+    <!-- <meta name="twitter:site" content="@chromiumdev">
+    <meta name="twitter:creator" content="@chromiumdev"> -->
+    <meta name="twitter:image:src" content="%PUBLIC_URL%/icons/icon-192x192.png">
+    <meta name="twitter:image:alt" content="Icon for Bomb Finder">
+    <!--
+      Open Graph protocal
+    -->
+    <meta property="og:title" content="Bomb Finder: A Minesweeper and proxx clone" />
+    <meta property="og:image" content="%PUBLIC_URL%/icons/icon-192x192.png" />
+    <meta name="og:image:height" content="192">
+    <meta name="og:image:width" content="192">
+    <meta name="og:image:type" content="image/png">
+    <meta name="og:url" content="%PUBLIC_URL%/">
+    <meta name="og:site_name" content="Bomb Finder: A Minesweeper and proxx clone">
+    <meta property="og:description" content="Try your best to navigate
+    a grid of bombs without stepping on one! Track your results and install!
+    A web based clone of minesweeper with insperation from the Google Chrome
+    Labs proxx app." />
+    <meta property="og:type" content="website" />
+    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/icons/icon-192x192.png">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
