--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta http-equiv="ScreenOrientation" content="autoRotate:disabled">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-    <meta name="theme-color" content="#333333" />
+    <meta name="theme-color" content="#000000" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -66,7 +66,8 @@
     A web based clone of minesweeper with insperation from the Google Chrome
     Labs proxx app." />
     <meta property="og:type" content="website" />
-    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/icons/icon-192x192.png">
+    <link rel="apple-touch-icon" sizes="192x192" href="%PUBLIC_URL%/icons/icon-192x192.png" />
+    <link rel="apple-touch-startup-image" href="%PUBLIC_URL%/icons/icon-192x192.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
